--- a/Interface/create.html
+++ b/Interface/create.html
@@ -18,5 +18,5 @@
 
    </div>
 </body>
-<center><footer class="footer" style="margin-top: 90px ; color: #20A2AA"><small>copyright @ bucketlist 2017|developed by James collins Macharia #TIA</small></footer></center>
+<center><footer class="footer" style="margin-top: 90px ; color: #20A2AA"><small>copyright @ BootcampBucketlist 2017|developed by James collins Macharia #TIA  </small></footer></center>
 </html>
