added a footer message on the homepage

--- a/Interface/home.html
+++ b/Interface/home.html
@@ -19,5 +19,5 @@
 
    </div>
 </body>
-<center><footer class="footer" style="margin-top: 100px ; color: #20A2AA"><small>copyright @ bucketlist 2017|developed by James collins Macharia #TIA</small></footer></center>
+<center><footer class="footer" style="margin-top: 100px ; color: #20A2AA"><small>copyright @ BootcampBucketlist 2017|developed by James collins Macharia #TIA</small></footer></center>
 </html>
