Added an add new item button to mybucketlist page

--- a/Interface/mybucketlist.html
+++ b/Interface/mybucketlist.html
@@ -22,8 +22,8 @@
   
     <div class="panel-body">
       <button type="button" class="btn btn-primary fa fa-plus -sm pull-right" data-toggle="modal" data-target="#myAdd">  </button>
-      
-    </div>
+      <button type="button" class="btn btn-primary fa fa-pencil -sm pull-right" data-toggle="modal" data-target="#myEdit">  </button>
+         </div>
   </div>
   </div>
 
